# MidiControllerCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
data/: midi_controller.json
data/pedals/: BigSky.json  Iridium.json  QuartzV2.json  ScarlettLove.json  SuperSwitcher.json  TimeLine.json
data/sets/: 2016-09-16 Set.json  2017-05-22 Set.json  2020-09-16 Set.json
data/songs/: Here As In Heaven - Lead.json  Here As In Heaven - Rhythm.json  Victory - Lead.json  Victory - Rhythm.json
docs/: architecture.md  config-format.md  domain.md  mcu.md  midi-protocol.md  plan.md  wifi-app-handoff.md  wiring.excalidraw  wiring.md
include/mc/adapters/mcu/: EmbeddedData.h  FlashKv.h  IKeyValueStore.h  KvCodec.h  McuClock.h  McuConfigStore.h  McuInput.h  McuLed.h  McuMidiOut.h  McuSystemControl.h  McuTempoOut.h  NoopConfigTransport.h  Pins.h  Ssd1306Display.h  Ssd1306Font.h  StdioConfigTransport.h  UsbConfigTransport.h  WifiManager.h
include/mc/adapters/sim/: FsConfigStore.h  SimAdapters.h
include/mc/app/: Application.h  EditorProtocol.h
include/mc/config/: ConfigLoader.h
include/mc/domain/: ButtonSM.h  ControllerState.h  MenuTree.h  MidiMessage.h  MidiPedal.h  PedalConfig.h  SongPartSet.h  Transform.h  Value.h
include/mc/ports/: IClock.h  IConfigStore.h  IConfigTransport.h  IDisplay.h  IInput.h  ILed.h  IMidiOut.h  ISystemControl.h  ITempoOut.h  IWifi.h
src/: main.cpp
src/adapters/mcu/: FlashKv.cpp  McuConfigStore.cpp  McuInput.cpp  McuLed.cpp  McuMidiOut.cpp  McuSystemControl.cpp  McuTempoOut.cpp  Ssd1306Display.cpp  UsbConfigTransport.cpp  WifiManager.cpp  main_mcu.cpp
src/adapters/mcu/usb/: tusb_config.h  usb_descriptors.c
src/adapters/mcu/wifi/: lwipopts.h
src/adapters/sim/: FsConfigStore.cpp
src/app/: Application.cpp  EditorProtocol.cpp
src/config/: ConfigLoader.cpp
src/domain/: ButtonSM.cpp  MenuTree.cpp  MidiMessage.cpp  MidiPedal.cpp  Transform.cpp  Value.cpp
tests/: test_main.cpp
tests/e2e/: test_e2e.cpp  test_e2e_parts.cpp  test_protocol.cpp
tests/mock/: test_midi_pedal.cpp  test_midi_pedal_actions.cpp  test_midi_pedal_more.cpp  test_midi_pedal_params.cpp
tests/support/: FakeClock.h  Fixtures.h  MockMidiOut.h  RecordingMidiOut.h  RecordingPorts.h
tests/unit/: test_accessors.cpp  test_application.cpp  test_application_more.cpp  test_boot_guard.cpp  test_button_sm.cpp  test_button_sm_more.cpp  test_config_loader.cpp  test_config_loader_more.cpp  test_controller_state.cpp  test_fs_config_store.cpp  test_fs_config_store_more.cpp  test_mcu_config_store.cpp  test_menu_tree.cpp  test_menu_tree_more.cpp  test_midi_message.cpp  test_midi_message_more.cpp  test_midi_message_param.cpp  test_pedal_config.cpp  test_save_defaults.cpp  test_sim_adapters.cpp  test_song_part_set.cpp  test_song_structure.cpp  test_song_values.cpp  test_transform.cpp  test_transform_param.cpp  test_value.cpp
tools/: embed_data.py  gen_font.py  gen_wiring_excalidraw.py  yaml2json.py
